TrainingDeveloperOrg/force-app/main/default/objects/Travel_Approval__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Department</description>
    <inlineHelpText>Department</inlineHelpText>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Travel Approvals</relationshipLabel>
    <relationshipName>Travel_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>