TrainingDeveloperOrg/force-app/main/default/objects/Travel_Approval__c/fields/Out_of_State__c.field-meta.xml
<CustomField>
    <fullName>Out_of_State__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Out-of-State</description>
    <inlineHelpText>Out-of-State</inlineHelpText>
    <label>Out-of-State</label>
    <type>Checkbox</type>
</CustomField>