TrainingDeveloperOrg/force-app/main/default/objects/Travel_Approval__c/fields/Purpose_of_Trip__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Trip__c</fullName>
    <description>Purpose of Trip</description>
    <inlineHelpText>Purpose of Trip</inlineHelpText>
    <label>Purpose of Trip</label>
    <type>TextArea</type>
</CustomField>