TrainingDeveloperOrg/force-app/main/default/objects/Travel_Approval__c/fields/Trip_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Trip_End_Date__c</fullName>
    <description>Trip End Date</description>
    <inlineHelpText>Trip End Date</inlineHelpText>
    <label>Trip End Date</label>
    <type>Date</type>
</CustomField>