TrainingDeveloperOrg/force-app/main/default/objects/Travel_Approval__c/fields/Trip_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Trip_Start_Date__c</fullName>
    <description>Trip Start Date</description>
    <inlineHelpText>Trip Start Date</inlineHelpText>
    <label>Trip Start Date</label>
    <type>Date</type>
</CustomField>